--- a/mappe/julius.html
+++ b/mappe/julius.html
@@ -1,2 +1,2 @@
-<center><strong><H1>Min kat Julius</strong></H1></center>
-<img src="download.png" alt="Pølse" height="42" width="42">
+<center><strong><H1>Min kat julius</strong></H1></center>
+<img src="download.png" alt="pølse" height="42" width="42">
