--- a/julius2.html
+++ b/julius2.html
@@ -1,2 +1,2 @@
 <center><strong><H1>Min kat julius</strong></H1></center>
-<img src="./download.png" alt="pølse" height="42" width="42">
+<img src="download.png" alt="pølse" height="42" width="42">
