--- a/julius2.html
+++ b/julius2.html
@@ -1,2 +1,2 @@
-<center><strong><H1>Min kat julius</strong></H1></center>
-<img src="download.png" alt="pølse" height="42" width="42">
+<center><strong><H1>Min Havestol Julius</strong></H1></center>
+<img src="Havestol" alt="Havestol" height="160" width="160">
