--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <div style="margin-left:20%;margin-right:20%;" >
-<Center>
+<center>
 <H1>Maine Coon</H1>
 <Br>
 <H1>- 10 kæmpe facts om verdens største huskat KAT</H1>
 <Br>
 <H1>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H1>
 <br>
-<em>Af: Mikkel Hede, 22. september 2017</Center></em>
+<em>Af: Mikkel Hede, 22. september 2017</center></em>
+
 <Br>
 <H1>1. Maine Coon's er store - som i KÆMPESTORE</H1>
 <p>Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).</p>
