--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <H1>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H1>
 <br>
 <em>Af: Mikkel Hede, 22. september 2017</center></em>
-
+<img src="Maine-Coon-Cat-Kitten-Pic.jpg" alt="Her er en lille sød missekat" height="160" width="160">
 <Br>
 <H1>1. Maine Coon's er store - som i KÆMPESTORE</H1>
 <p>Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).</p>
@@ -19,6 +19,7 @@
 <p>Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</p>
 <Br>
+<div style="background-color: black; color:white; padding: 2%">
 <H1>4. Maine Coon's oprindelse</H1>
 <p>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
 Coon rimer på det engelske ord for vaskebjørn: racoon. Der var faktisk tidligere folk, der troede, at Maine Coon'en på grund af dens udseende var beslægtet med vaskebjørnen. Dette kan være det sproghistoriske ophav til det andet led i kattens navn. Teorien om katte og vaskebjørnes slægtskab er dig i dag helt afvist. De to dyr har ingen genetisk mulighed for at parre sig.
@@ -34,6 +35,7 @@ Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt 
 <H1>6. Priser på Main Coons</H1>
 <p>Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.</p>
 <Br>
+</div>
 <H1>7. Maine Coon elsker vand</H1>
 <p>Katte er ikke kendt som de store vandelskere. Alle katteracer kan ganske vist svømme, når de er tvunget til det, men der er en god grund til, at det hedder en "vandhund" og ikke en "vandkat".
 Maine Coon'en er dog nok den huskat, der bedst kvalificerer til betegnelsen "vandkat". Maine Coon's er nemlig meget fascinerede af vand. Måske skyldes det, at deres tætte sneegnede pels er delvis vandskyende. Nogle Maine Coon's kan finde på at vende bunden i vejret på vandskålen for at lege med vandet, andre er faste gæster med øjnene på stilke, når bruseren er tændt, eller der bliver skyllet ud i toilettet.</p>
