--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H3>
 <br>
 <em>Af: Mikkel Hede, 22. september 2017</center></em>
-<img src="Maine-Coon-Cat-Kitten-Pic.jpg" alt="Her er en lille sød missekat" height="160" width="160">
+<center><img src="Maine-Coon-Cat-Kitten-Pic.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 <Br>
 <H1>1. Maine Coon's er store - som i KÆMPESTORE</H1>
 <p>Der er ret stor forskel i størrelse på de to køn inden for Maine Coon-racen. En fuldvoksen hun-Maine Coon vejer typisk mellem 4 og 6 kilo. Hannerne vejer generelt et par kilo mere: 6-9 kilo. Der er dog eksempler på giga-Maine Coon's, som har vejet over 15 kilo. Længden på katten er også imponerende. 123 centimer er rekorden. De største eksemplarer af Main Coon-hankatte ser faktisk så enorme ud, at det er svært at tro, at det er en huskat. I USA, hvor racen stammer fra, er de faktisk undertiden blevet forvekslet med den udomesticerede vilde katterace, bobkatten (rødlossen).</p>
@@ -19,7 +19,7 @@
 <p>Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</p>
 <Br>
-<img src="main-coon-har-oerer.jpg" alt="Her er en lille sød missekat" height="160" width="160">
+<center><img src="main-coon-har-oerer.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 <div style="background-color: black; color:white; padding: 2%">
 <H1>4. Maine Coon's oprindelse</H1>
 <p>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
