--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <H1>3. En Maine Coon er skabt til vintervejr</H1>
 <p>Når vintervejret bider, må det være dejligt inde i pelsen på en Maine Coon. Kattens pels er som skabt til at modstå vinterens strabadser:Pelsen er lang og har flere lag. Potterne er store og perfekte til at træde oven på sne uden at gå igennem.Halen er lang og busket, og den egner sig fortrinligt som et varmende svøb omkring Maine Coon'en, når den krøller sig sammen.
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</p>
+</div>
 <Br>
 <div style="background-color: black; color:white; padding: 2%">
 <center><img src="main-coon-har-oerer.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
@@ -37,6 +38,7 @@ Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt 
 <p>Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.</p>
 <Br>
 </div>
+<div style="margin-left:20%;margin-right:20%;" >
 <H1>7. Maine Coon elsker vand</H1>
 <p>Katte er ikke kendt som de store vandelskere. Alle katteracer kan ganske vist svømme, når de er tvunget til det, men der er en god grund til, at det hedder en "vandhund" og ikke en "vandkat".
 Maine Coon'en er dog nok den huskat, der bedst kvalificerer til betegnelsen "vandkat". Maine Coon's er nemlig meget fascinerede af vand. Måske skyldes det, at deres tætte sneegnede pels er delvis vandskyende. Nogle Maine Coon's kan finde på at vende bunden i vejret på vandskålen for at lege med vandet, andre er faste gæster med øjnene på stilke, når bruseren er tændt, eller der bliver skyllet ud i toilettet.</p>
@@ -52,3 +54,4 @@ Læs også: Populære navne til katte og hunde</p>
 <H1>10. Maine Coon rekorder</H1>
 <p>Den længste kat nogensinde er i følge Guiness World Records Maine Coon'en Stewie, der er blevet målt til 123 cm fra næsetip til halespids. Den tungeste Maine Coon, der nogensinde har været på vægten, vejede 15,9 kilo.</p>
 <Br>
+</div>
