--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et godt kendetegn. De hjælper med at beskytte mod bidende vintervinde ude i det fri. En Main Coon's poter er i øvrigt et kapitel for sig. Bliv ikke overrassket, hvis du ser en Maine Coon bruge sine store poter som hænder til at samle ting op og håndtere sin føde med.</p>
 </div>
 <Br>
-<div style="background-color: black; color:white; padding: 2%">
+<div style="background-color: black; color:white; padding: 2%; margin-left:20%;margin-right:20%;">
 <center><img src="main-coon-har-oerer.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 <H1>4. Maine Coon's oprindelse</H1>
 <p>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
