--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<center><img src="maine-coon-race.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
+<Br>
 <div style="margin-left:20%;margin-right:20%;" >
 <center>
 <H1>Maine Coon</H1>
