--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
+<div style="margin-left:20%;margin-right:20%;" >
 <center><img src="maine-coon-race.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
+</div>
 <Br>
 <div style="margin-left:20%;margin-right:20%;" >
 <center>
