--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ Hvis du ikke kan kende en Maine Coon på andet, så er hårene omkring ørene et
 <Br>
 <div style="background-color: black; color:white; padding: 2%; ">
 <center><img src="main-coon-har-oerer.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
+<div style="margin-left:20%;margin-right:20%;">
 <H1>4. Maine Coon's oprindelse</H1>
 <p>Der florerer mange mystiske historier om Maine Coon'ens oprindelse. Ordet Maine har at gøre med den amerikanske stat Maine i det nordøstlige USA, hvor katteracen stammer fra. Det er der ikke noget mystisk i.
 Coon rimer på det engelske ord for vaskebjørn: racoon. Der var faktisk tidligere folk, der troede, at Maine Coon'en på grund af dens udseende var beslægtet med vaskebjørnen. Dette kan være det sproghistoriske ophav til det andet led i kattens navn. Teorien om katte og vaskebjørnes slægtskab er dig i dag helt afvist. De to dyr har ingen genetisk mulighed for at parre sig.
@@ -41,6 +42,7 @@ Det stod så grelt til, at der i 50erne faktisk var rapporter om, at racen helt 
 <H1>6. Priser på Main Coons</H1>
 <p>Prisen på en Maine Coon kan godt være pebret. Hvis killingen skal have en god stamtavle og kunne begå sig i konkurrencerne på katteudstillingerne, kan prisen let løbe op i mere end 5000 kroner. Har du kun brug for en kælekat, kan du muligvis nøjes med at slippe 3-4000 kroner. Priserne er i øvrigt generelt højere på Sjælland end i Jylland.</p>
 <Br>
+</div>
 </div>
 <div style="margin-left:20%;margin-right:20%;" >
 <H1>7. Maine Coon elsker vand</H1>
