--- a/index.html
+++ b/index.html
@@ -1,3 +1,77 @@
+<!doctype html>
+<html lang=”da”>
+ <head>
+ <meta charset=”utf-8”>
+ <title>Dokument titel</title>
+ <style>
+  html{
+font-family: "Gill Sans", sans-serif;
+  scroll-behavior: smooth;
+}
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  overflow:hidden;
+  background-color: #f1f1f1;
+}
+
+li {
+    float: left;
+}
+
+  li a, .dropbtn {
+    display: inline-block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+  text-decoration: underline;
+  background: #111;
+  color: white;
+}
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+#kap3{
+  color: red;
+}
+
+.subheading
+{
+  font-style: italic;
+  font-size: 25px;
+}
+ </style>
+ </head>
+ <body>
 <div style="margin-left:20%;margin-right:20%;" >
 <center><img src="maine-coon-race.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 </div>
@@ -85,3 +159,5 @@ Læs også: Populære navne til katte og hunde</p>
 <Br>
 <center><img src="stor-maine-coon.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 </div>
+ </body>
+ </html>
