--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<div style="margin-left:20%;margin-right:20%;" >
 <!doctype html>
 <html lang=”da”>
  <head>
@@ -98,6 +99,7 @@ li.dropdown {
     </ol>
   </details>
 </nav>
+ </div>
 <div style="margin-left:20%;margin-right:20%;" >
 <center>
 <H1>Maine Coon</H1>
