--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<div style="margin-left:20%;margin-right:20%;" >
 <!doctype html>
 <html lang=”da”>
  <head>
@@ -9,7 +8,7 @@
 font-family: "Gill Sans", sans-serif;
   scroll-behavior: smooth;
 }
-
+  h1[id="kap"] { scroll-margin-top: 16px; }
 ul{
   list-style-type: none;
   padding: 0;
@@ -70,6 +69,8 @@ li.dropdown {
   font-style: italic;
   font-size: 25px;
 }
+
+  
  </style>
  </head>
  <body>
@@ -77,11 +78,6 @@ li.dropdown {
 <center><img src="maine-coon-race.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 </div>
 <Br>
-<style>
-  html { scroll-behavior: smooth; }
-  h1[id^="kap"] { scroll-margin-top: 16px; }
-</style>
-
 <nav>
   <details>
     <summary style="cursor:pointer; font-weight:700;">Kapiteloversigt</summary>
