--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<html lang=”da”>
+<html lang="da">
  <head>
- <meta charset=”utf-8”>
+ <meta charset"utf-8">
  <title>Dokument titel</title>
  <style>
   html{
@@ -95,7 +95,6 @@ li.dropdown {
     </ol>
   </details>
 </nav>
- </div>
 <div style="margin-left:20%;margin-right:20%;" >
 <center>
 <H1>Maine Coon</H1>
@@ -104,7 +103,7 @@ li.dropdown {
 <Br>
 <H3>Er Maine Coon i famlie med vaskebjørnen, og var det vikingerne, der bragte den til Maine i USA? Her er 10 fakta om den majestætisk udsende katterace, der kan se frygtindgydende ud, men i virkeligheden er en af de mest kærlige katteracer.</H3>
 <br>
-<em>Af: Mikkel Hede, 22. september 2017</center></em>
+<em>Af: Mikkel Hede, 22. september 2017</em></center>
 <center><img src="Maine-Coon-Cat-Kitten-Pic.jpg" alt="Her er en lille sød missekat" height="500" width="500"></center>
 <Br>
 <H1 id="kap1">1. Maine Coon's er store - som i KÆMPESTORE</H1>
