--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ li {
 li a:hover {
   text-decoration: underline;
   background: #111;
-  color: white;
+  color: black;
 }
 li.dropdown {
     display: inline-block;
