--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ li {
 li a:hover {
   text-decoration: underline;
   background: #111;
-  color: black;
+  color: white;
 }
 li.dropdown {
     display: inline-block;
@@ -48,7 +48,7 @@ li.dropdown {
 }
 
 .dropdown-content a {
-    color: black;
+    color: cyan;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -61,7 +61,7 @@ li.dropdown {
     display: block;
 }
 #kap3{
-  color: red;
+  color: cyan;
 }
 
 .subheading
