--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ li.dropdown {
 }
 
 .dropdown-content a {
-    color: purple;
+    color: beige;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -61,7 +61,7 @@ li.dropdown {
     display: block;
 }
 #kap3{
-  color: purple;
+  color: beige;
 }
 
 .subheading
